#pragma once

#include "Evenement.h"

class EvenementToujours : public Evenement {
    
private:

public:
    EvenementToujours();

    virtual void Executer();
};
